# hemosim

./: .gitignore  .research-project.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  HELDOUT_SEEDS.md  PATHWAY.md  README.md  pyproject.toml  review-certificate.md
.reviews/: gate-runner-validation-2026-04-16.md  mechanistic-claims.md  v0.2.1-review-certificate.md  v0.2.1-science-skill-report.md  v0.2.2-preflight-certificate.md  v0.2.2-review-certificate.md  v0.2.3-polish-certificate.md
docs/: mechanistic-claims.md
feedback/: 2026-04-18-consistency-reviewer-widen-gate.md  2026-04-18-sr-m-registry-authoring-discipline.md  2026-04-18-warfarin-genotype-rescaling.md
paper/: hemosim.tex  protocol_summary.md  references.bib  silent_deployment_protocol.tex
results/: EXPECTED_RESULTS.json  calibration_report.md  discovery.json  published_calibration.json  training_results.json
scripts/: diagnose_warfarin.py  generate_results.py  generate_results.v0.1-fabricated.py.bak  plot_paper_figures.py  reproduce.sh  run_mimic_calibration.py  run_published_calibration.py  train_nemati_dqn.py  verify_citation_consistency.py
src/hemosim/: __init__.py  reproducibility.py
src/hemosim/agents/: __init__.py  baselines.py  baselines_extended.py  ppo.py
src/hemosim/benchmarks/: __init__.py  runner.py
src/hemosim/clinical/: __init__.py  dss.py  safety.py
src/hemosim/envs/: __init__.py  dic_management.py  doac_management.py  heparin_infusion.py  heparin_infusion_pomdp.py  pomdp.py  warfarin_dosing.py
src/hemosim/metrics/: __init__.py  clinical.py
src/hemosim/models/: __init__.py  coagulation.py  doac_pkpd.py  heparin_pkpd.py  patient.py  warfarin_pkpd.py
src/hemosim/validation/: __init__.py  mimic_calibration.py  mimic_schema.md  published_calibration.py
tests/: conftest.py  test_baselines.py  test_baselines_extended.py  test_citation_consistency_gate.py  test_clinical_dss.py  test_clinical_metrics.py  test_clinical_safety.py  test_coagulation.py  test_dic_cascade.py  test_dic_env.py  test_doac_env.py  test_doac_pkpd.py  test_heparin_env.py  test_heparin_pkpd.py  test_integration.py  test_integrity_audit.py  test_mimic_calibration.py  test_patient.py  test_pomdp.py  test_published_calibration.py  test_reproducibility.py  test_srm_abstract_meta.py  test_srm_dic_hockin_mann_cascade.py  test_srm_doac_rely_rocket_aristotle.py  test_srm_env_reward_function_shapes.py  test_srm_heparin_raschke_aptt.py  test_srm_isth_major_bleed.py  test_srm_nemati_dqn_arch.py  test_srm_pomdp_lab_masking.py  test_srm_rosendaal_ttr.py  test_srm_silent_deployment_protocol_stats.py  test_srm_warfarin_hamberg_pkpd.py  test_srm_warkentin_4t_hit.py  test_warfarin_env.py  test_warfarin_pkpd.py
